[gd_scene load_steps=20 format=1]

[ext_resource path="res://scripts/Mapas/Mercado.gd" type="Script" id=1]
[ext_resource path="res://assets/Mapas/pipo-popupemotes Split images/new_mission.png" type="Texture" id=2]
[ext_resource path="res://tilesets/tilesetCity.tres" type="TileSet" id=3]
[ext_resource path="res://tilesets/tilesetIndoors.tres" type="TileSet" id=4]
[ext_resource path="res://scenes/Personagem/Personagem.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Npc/npc.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/Personagens/$Lanto129.png" type="Texture" id=7]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="Animation" id=2]

resource/name = "ButtonAnim"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5, 0.9 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 37.6327

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 58.9985, 2.46771 )

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 605.042, 65.0954 )

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 234.408, 66.313 )

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 190.403, 90.621 )

[sub_resource type="RectangleShape2D" id=8]

custom_solver_bias = 0.0
extents = Vector2( 353.085, 92.2181 )

[sub_resource type="RectangleShape2D" id=9]

custom_solver_bias = 0.0
extents = Vector2( 34.8003, 433.709 )

[sub_resource type="SegmentShape2D" id=10]

custom_solver_bias = 0.0
a = Vector2( 42.058, 10.4921 )
b = Vector2( 0, 10 )

[sub_resource type="RectangleShape2D" id=11]

custom_solver_bias = 0.0
extents = Vector2( 34.1051, 53.5533 )

[sub_resource type="RectangleShape2D" id=12]

custom_solver_bias = 0.0
extents = Vector2( 16.8299, 26.7426 )

[node name="Mercado" type="Node2D"]

transform/rot = 270.0
script/script = ExtResource( 1 )

[node name="BotaoMario" type="Node2D" parent="."]

transform/pos = Vector2( 507.141, -147.814 )
z/z = 5

[node name="TouchScreenButton" type="TouchScreenButton" parent="BotaoMario"]

transform/pos = Vector2( 26.5919, 21.8012 )
transform/scale = Vector2( 4, 4 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 1 )
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Sprite" type="Sprite" parent="BotaoMario"]

transform/pos = Vector2( 28.1682, 27.0779 )
transform/scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 2 )
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="BotaoMario"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/ButtonAnim = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "ButtonAnim"

[node name="AreaBotao" type="Area2D" parent="BotaoMario"]

transform/pos = Vector2( 27.5365, 68.529 )
transform/scale = Vector2( 0.769231, 0.769231 )
input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 2.3949, 1.79623 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BotaoMario/AreaBotao"]

transform/pos = Vector2( 2.3949, 1.79623 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="Chao" type="TileMap" parent="."]

transform/scale = Vector2( 4, 4 )
mode = 0
tile_set = ExtResource( 3 )
cell/size = Vector2( 16, 16 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( -131073, 1610613144, -196608, 1610613144, -196607, 1610613144, -196606, 1610613144, -196605, 1610613144, -196604, 1610613144, -196603, 1610613144, -196602, 1610613144, -196601, 1610613144, -196600, 1610613144, -196599, 1610613144, -196598, 1610613144, -196597, 1610613144, -196596, 1610613144, -196595, 1610613144, -196594, 1610613144, -196593, 1610613144, -65537, 1610613144, -131072, 1610613144, -131071, 1610613144, -131070, 1610613144, -131069, 1610613144, -131068, 1610613144, -131067, 1610613144, -131066, 1610613144, -131065, 1610613144, -131064, 1610613144, -131063, 1610613144, -131062, 1610613144, -131061, 1610613144, -131060, 1610613144, -131059, 1610613144, -131058, 1610613144, -131057, 1610613144, -1, 1610613144, -65536, 1610613144, -65535, 1610613144, -65534, 1610613144, -65533, 1610613144, -65532, 1610613144, -65531, 1610613144, -65530, 1610613144, -65529, 1610613144, -65528, 1610613144, -65527, 1610613144, -65526, 1610613144, -65525, 1610613144, -65524, 1610613144, -65523, 1610613144, -65522, 1610613144, -65521, 1610613144, 65535, 1610613144, 0, 1610613144, 1, 1610613144, 2, 1610613144, 3, 1610613144, 4, 1610613144, 5, 1610613144, 6, 1610613144, 7, 1610613144, 8, 1610613144, 9, 1610613144, 10, 1610613144, 11, 1610613144, 12, 1610613144, 13, 1610613144, 14, 1610613144, 15, 1610613144, 131071, 1610613144, 65536, 1610613144, 65537, 1610613144, 65538, 1610613144, 65539, 1610613144, 65540, 1610613144, 65541, 1610613144, 65542, 1610613144, 65543, 1610613144, 65544, 1610613144, 65545, 1610613144, 65546, 1610613144, 65547, 1610613144, 65548, 1610613144, 65549, 1610613144, 65550, 1610613144, 65551, 1610613144, 196607, 1610613144, 131072, 1610613144, 131073, 1610613144, 131074, 1610613144, 131075, 1610613144, 131076, 1610613144, 131077, 1610613144, 131078, 1610613144, 131079, 1610613144, 131080, 1610613144, 131081, 1610613144, 131082, 1610613144, 131083, 1610613144, 131084, 1610613144, 131085, 1610613144, 131086, 1610613144, 131087, 1610613144, 262143, 1610613144, 196608, 1610613144, 196609, 1610613144, 196610, 1610613144, 196611, 1610613144, 196612, 1610613144, 196613, 1610613144, 196614, 1610613144, 196615, 1610613144, 196616, 1610613144, 196617, 1610613144, 196618, 1610613144, 196619, 1610613144, 196620, 1610613144, 196621, 1610613144, 196622, 1610613144, 196623, 1610613144, 327679, 1610613144, 262144, 1610613144, 262145, 1610613144, 262146, 1610613144, 262147, 1610613144, 262148, 1610613144, 262149, 1610613144, 262150, 1610613144, 262151, 1610613144, 262152, 1610613144, 262153, 1610613144, 262154, 1610613144, 262155, 1610613144, 262156, 1610613144, 262157, 1610613144, 262158, 1610613144, 262159, 1610613144, 393215, 1610613144, 327680, 1610613144, 327681, 1610613144, 327682, 1610613144, 327683, 1610613144, 327684, 1610613144, 327685, 1610613144, 327686, 1610613144, 327687, 1610613144, 327688, 1610613144, 327689, 1610613144, 327690, 1610613144, 327691, 1610613144, 327692, 1610613144, 327693, 1610613144, 327694, 1610613144, 327695, 1610613144, 458751, 1610613144, 393216, 1610613144, 393217, 1610613144, 393218, 1610613144, 393219, 1610613144, 393220, 1610613144, 393221, 1610613144, 393222, 1610613144, 393223, 1610613144, 393224, 1610613144, 393225, 1610613144, 393226, 1610613144, 393227, 1610613144, 393228, 1610613144, 393229, 1610613144, 393230, 1610613144, 393231, 1610613144, 524287, 1610613144, 458752, 1610613144, 458753, 1610613144, 458754, 1610613144, 458755, 1610613144, 458756, 1610613144, 458757, 1610613144, 458758, 1610613144, 458759, 1610613144, 458760, 1610613144, 458761, 1610613144, 458762, 1610613144, 458763, 1610613144, 458764, 1610613144, 458765, 1610613144, 458766, 1610613144, 458767, 1610613144, 589823, 1610613144, 524288, 1610613144, 524289, 1610613144, 524290, 1610613144, 524291, 1610613144, 524292, 1610613144, 524293, 1610613144, 524294, 1610613144, 524295, 1610613144, 524296, 1610613144, 524297, 1610613144, 524298, 1610613144, 524299, 1610613144, 524300, 1610613144, 524301, 1610613144, 524302, 1610613144, 524303, 1610613144, 655359, 1610613144, 589824, 1610613144, 589825, 1610613144, 589826, 1610613144, 589827, 1610613144, 589828, 1610613144, 589829, 1610613144, 589830, 1610613144, 589831, 1610613144, 589832, 1610613144, 589833, 1610613144, 589834, 1610613144, 589835, 1610613144, 589836, 1610613144, 589837, 1610613144, 589838, 1610613144, 589839, 1610613144, 655364, 1610613144, 655365, 1610613144, 720900, 1610613144, 720901, 1610613144, 786436, 1610613144, 786437, 1610613144 )
__meta__ = {
"_edit_lock_": true
}

[node name="Paredes" type="TileMap" parent="."]

transform/pos = Vector2( 2.05054, 0 )
transform/scale = Vector2( 4, 4 )
mode = 0
tile_set = ExtResource( 3 )
cell/size = Vector2( 16, 16 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( -196610, 630, -196609, -1610612143, -262144, -1610612143, -262143, -1610612143, -262142, -1610612143, -262141, -1610612143, -262140, -1610612143, -262139, -1610612143, -262138, -1610612143, -262137, -1610612143, -262136, -1610612143, -262135, -1610612143, -262134, -1610612143, -262133, -1610612143, -262132, -1610612143, -262131, -1610612143, -262130, -1610612143, -262129, -1610612143, -262128, 631, -131074, 593, -131073, 1610613465, -196608, 1610613465, -196607, 1610613465, -196606, 1610613465, -196605, 1610613465, -196604, 1610613465, -196603, 1610613465, -196602, 1610613465, -196601, 1610613465, -196600, 1610613465, -196599, 1610613465, -196598, 1610613465, -196597, 1610613465, -196596, 1610613465, -196595, 1610613465, -196594, 1610613465, -196593, 1610613465, -196592, 593, -65538, 593, -65537, -1073741098, -131072, -1073741098, -131071, -1073741098, -131070, -1073741098, -131069, -1073741098, -131068, -1073741098, -131067, -1073741098, -131066, -1073741098, -131065, -1073741098, -131064, -1073741098, -131063, -1073741098, -131062, -1073741098, -131061, -1073741098, -131060, -1073741098, -131059, -1073741098, -131058, -1073741098, -131057, -1073741098, -131056, 593, -2, 593, -65520, 593, 65534, 632, 65535, 628, 0, 628, 1, 628, 2, 628, 3, 628, 4, 628, 5, 629, 9, 627, 10, 628, 11, 628, 12, 628, 13, 628, 14, 628, 15, 628, 16, 596, 131070, 593, 131071, 729, 65536, 729, 65537, 729, 65538, 729, 65539, 729, 65540, 729, 65541, 690, 65545, 726, 65546, 729, 65547, 729, 65548, 729, 65549, 729, 65550, 729, 65551, 729, 65552, 593, 196606, 593, 196607, 689, 131072, 689, 131073, 689, 131074, 689, 131075, 689, 131076, 689, 131077, 688, 131081, 687, 131082, 689, 131083, 689, 131084, 689, 131085, 689, 131086, 689, 131087, 689, 131088, 593, 262142, 593, 196624, 593, 327678, 632, 327679, 628, 262144, 628, 262145, 628, 262146, 628, 262147, 628, 262148, 628, 262149, 629, 262153, 627, 262154, 628, 262155, 628, 262156, 628, 262157, 628, 262158, 628, 262159, 628, 262160, 596, 393214, 593, 393215, 729, 327680, 729, 327681, 729, 327682, 729, 327683, 729, 327684, 729, 327685, 690, 327689, 726, 327690, 729, 327691, 729, 327692, 729, 327693, 729, 327694, 729, 327695, 729, 327696, 593, 458750, 593, 458751, 689, 393216, 689, 393217, 689, 393218, 689, 393219, 689, 393220, 689, 393221, 688, 393225, 687, 393226, 689, 393227, 689, 393228, 689, 393229, 689, 393230, 689, 393231, 689, 393232, 593, 524286, 593, 458768, 593, 589822, 593, 524304, 593, 655358, 593, 589840, 593, 720894, 1073742454, 720895, -1610612143, 655360, -1610612143, 655361, -1610612143, 655362, -1610612143, 655363, -1073741821, 655366, -1610612733, 655367, -1610612143, 655368, -1610612143, 655369, -1610612143, 655370, -1610612143, 655371, -1610612143, 655372, -1610612143, 655373, -1610612143, 655374, -1610612143, 655375, -1610612143, 655376, 1073742455, 786430, 519, 786431, 520, 720896, 520, 720897, 520, 720898, 520, 720899, 521, 720902, 519, 720903, 520, 720904, 520, 720905, 520, 720906, 520, 720907, 520, 720908, 520, 720909, 520, 720910, 520, 720911, 520, 720912, 521, 851966, 411, 851967, 412, 786432, 412, 786433, 412, 786434, 412, 786435, 413, 786438, 411, 786439, 412, 786440, 412, 786441, 412, 786442, 412, 786443, 412, 786444, 412, 786445, 412, 786446, 412, 786447, 412, 786448, 413 )
__meta__ = {
"_edit_lock_": true
}

[node name="Moveis" type="TileMap" parent="."]

transform/scale = Vector2( 4, 4 )
mode = 0
tile_set = ExtResource( 4 )
cell/size = Vector2( 16, 16 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( -131066, 536870988, -131064, 76, 327689, 536870988, 327695, 76, 393221, 76 )
__meta__ = {
"_edit_lock_": true
}

[node name="Moveis2" type="TileMap" parent="."]

transform/pos = Vector2( 0, -4.10107 )
transform/scale = Vector2( 4, 4 )
mode = 0
tile_set = ExtResource( 4 )
cell/size = Vector2( 16, 16 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( -131073, 1610612851, -196608, 1610612851, -196607, 1610612851, -196606, 1610612851, -196605, 1610612851, -196604, 1610612851, -196602, 536870921, -196601, 4, -196600, 7, -196598, 536871049, -196597, 536871049, -196596, 536871049, -196595, 536871048, -196594, 536871048, -196593, 536871049, -65537, 11, -131072, 12, -131071, 12, -131070, 13, -131069, 536870920, -131068, 7, -131066, 10, -131065, 10, -131064, 10, -131062, 536871050, -131061, 536871048, -131060, 536871050, -131059, 536871050, -131058, 536871050, -131057, 536871050, 131071, 40, 65536, 57, 65537, 57, 65538, 4, 65539, 55, 65540, 55, 65541, 536870950, 65545, 536871008, 65546, 536871008, 65547, 75, 65548, 536871008, 65549, 536871008, 65550, 75, 65551, 536871008, 196607, 39, 131072, 56, 131073, 56, 131074, 56, 131075, 4, 131076, 4, 131077, 8, 131081, 536871071, 131082, 536871071, 131083, 536871071, 131084, 536871071, 131085, 536871024, 131086, 536871025, 131087, 536871025, 393215, 536870920, 327680, 56, 327681, 56, 327682, 56, 327683, 57, 327684, 57, 327685, 9, 327689, 55, 327690, 55, 327691, 55, 327692, 55, 327693, 55, 327694, 55, 327695, 55, 458751, 159, 393216, 159, 393217, 159, 393218, 10, 393219, 154, 393220, 154, 393221, 10, 393225, 11, 393226, 12, 393227, 12, 393228, 12, 393229, 12, 393230, 12, 393231, 13, 524287, 10, 589823, 10, 655359, 10 )
__meta__ = {
"_edit_lock_": true
}

[node name="MoveisGrandes" type="TileMap" parent="."]

transform/scale = Vector2( 8, 8 )
mode = 0
tile_set = ExtResource( 4 )
cell/size = Vector2( 16, 16 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 262149, -1610612592 )
__meta__ = {
"_edit_lock_": true
}

[node name="personagem" parent="." instance=ExtResource( 5 )]

transform/pos = Vector2( 321.935, 741.965 )

[node name="Door" type="Area2D" parent="."]

transform/pos = Vector2( 318.762, 804.495 )
input/pickable = true
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 24.3839 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door"]

transform/pos = Vector2( 0, 24.3839 )
shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[node name="Colisoes" type="Node2D" parent="."]

editor/display_folded = true

[node name="Paredes" type="StaticBody2D" parent="Colisoes"]

editor/display_folded = true
transform/pos = Vector2( 473.76, 198.017 )
input/pickable = false
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 5.25461, -389.541 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 6 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, -321.374, -131.591 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 6 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 338.843, -132.079 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 6 )
shapes/3/transform = Matrix32( 1, 0, 0, 1, -321.374, 124.16 )
shapes/3/trigger = false
shapes/4/shape = SubResource( 6 )
shapes/4/transform = Matrix32( 1, 0, 0, 1, 337.138, 124.16 )
shapes/4/trigger = false
shapes/5/shape = SubResource( 7 )
shapes/5/transform = Matrix32( 1, 0, 0, 1, -405.268, 532.481 )
shapes/5/trigger = false
shapes/6/shape = SubResource( 8 )
shapes/6/transform = Matrix32( 1, 0, 0, 1, 265.423, 535.53 )
shapes/6/trigger = false
shapes/7/shape = SubResource( 9 )
shapes/7/transform = Matrix32( 1, 0, 0, 1, 585.138, 1.62503 )
shapes/7/trigger = false
shapes/8/shape = SubResource( 9 )
shapes/8/transform = Matrix32( 1, 0, 0, 1, -568.876, 1.62503 )
shapes/8/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colisoes/Paredes"]

transform/pos = Vector2( 5.25461, -389.541 )
shape = SubResource( 5 )
trigger = false
_update_shape_index = 0

[node name="CollisionShape2D 2" type="CollisionShape2D" parent="Colisoes/Paredes"]

transform/pos = Vector2( -321.374, -131.591 )
shape = SubResource( 6 )
trigger = false
_update_shape_index = 1

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Colisoes/Paredes"]

transform/pos = Vector2( 338.843, -132.079 )
shape = SubResource( 6 )
trigger = false
_update_shape_index = 2

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Colisoes/Paredes"]

transform/pos = Vector2( -321.374, 124.16 )
shape = SubResource( 6 )
trigger = false
_update_shape_index = 3

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Colisoes/Paredes"]

transform/pos = Vector2( 337.138, 124.16 )
shape = SubResource( 6 )
trigger = false
_update_shape_index = 4

[node name="CollisionShape2D 3" type="CollisionShape2D" parent="Colisoes/Paredes"]

transform/pos = Vector2( -405.268, 532.481 )
shape = SubResource( 7 )
trigger = false
_update_shape_index = 5

[node name="CollisionShape2D 4" type="CollisionShape2D" parent="Colisoes/Paredes"]

transform/pos = Vector2( 265.423, 535.53 )
shape = SubResource( 8 )
trigger = false
_update_shape_index = 6

[node name="CollisionShape2D 5" type="CollisionShape2D" parent="Colisoes/Paredes"]

transform/pos = Vector2( 585.138, 1.62503 )
shape = SubResource( 9 )
trigger = false
_update_shape_index = 7

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Colisoes/Paredes"]

transform/pos = Vector2( -568.876, 1.62503 )
shape = SubResource( 9 )
trigger = false
_update_shape_index = 8

[node name="Moveis" type="StaticBody2D" parent="Colisoes"]

transform/pos = Vector2( 110.168, 547.571 )
input/pickable = false
shapes/0/shape = SubResource( 10 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -160.665, 40.9973 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 10 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, -160.665, -25.4849 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 10 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, -160.665, -88.643 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 11 )
shapes/3/transform = Matrix32( 1, 0, 0, 1, 582.374, 30.1368 )
shapes/3/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colisoes/Moveis"]

transform/pos = Vector2( -160.665, 40.9973 )
shape = SubResource( 10 )
trigger = false
_update_shape_index = 0

[node name="CollisionShape2D1" type="CollisionShape2D" parent="Colisoes/Moveis"]

transform/pos = Vector2( -160.665, -25.4849 )
shape = SubResource( 10 )
trigger = false
_update_shape_index = 1

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Colisoes/Moveis"]

transform/pos = Vector2( -160.665, -88.643 )
shape = SubResource( 10 )
trigger = false
_update_shape_index = 2

[node name="CollisionShape2D 2" type="CollisionShape2D" parent="Colisoes/Moveis"]

transform/pos = Vector2( 582.374, 30.1368 )
shape = SubResource( 11 )
trigger = false
_update_shape_index = 3

[node name="mercadora" parent="." instance=ExtResource( 6 )]

editor/display_folded = true
transform/pos = Vector2( 658.356, 451.268 )

[node name="Sprite" type="Sprite" parent="mercadora"]

transform/pos = Vector2( 4.96097, 7.69501 )
transform/scale = Vector2( 1.75, 1.75 )
texture = ExtResource( 7 )
region = true
region_rect = Rect2( 36, 32, 25, 32 )

[node name="StaticBody2D" type="StaticBody2D" parent="mercadora"]

editor/display_folded = true
transform/pos = Vector2( 2.89819, 7.17484 )
input/pickable = false
shapes/0/shape = SubResource( 12 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 1.44095, 1.80121 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="mercadora/StaticBody2D"]

transform/pos = Vector2( 1.44095, 1.80121 )
shape = SubResource( 12 )
trigger = false
_update_shape_index = 0

[connection signal="pressed" from="BotaoMario/TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]

[connection signal="body_enter" from="BotaoMario/AreaBotao" to="." method="_on_AreaBotao_body_enter"]

[connection signal="body_exit" from="BotaoMario/AreaBotao" to="." method="_on_AreaBotao_body_exit"]

[connection signal="body_enter" from="Door" to="." method="_on_Door_body_enter"]

[connection signal="body_enter" from="mercadora" to="." method="_on_mercador_body_enter"]


